--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>My Scheduler</title>
+    <title>Team4</title>
   </head>
   <body>
     <div id="root"></div>
